removed several warnings